<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_delivery"
        android:textSize="35sp"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username_text"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_marginTop="40dp"
        />

    <EditText
        android:id="@+id/username_delivery"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_text"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_marginTop="40dp"
        />

    <EditText
        android:id="@+id/password_delivery"
        android:inputType="textPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/error"
        android:textColor="#FF0000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="13sp"
        android:gravity="center"
        android:layout_marginTop="40dp"
        />
    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginTop="40dp"
        android:onClick="performRegisterDelivery"
        tools:ignore="OnClick" />
</LinearLayout>
