<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="35sp"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username_text"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_marginTop="40dp"
        />

    <EditText
        android:id="@+id/username"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_text"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_marginTop="40dp"
        />

    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/error"
        android:textColor="#FF0000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="13sp"
        android:gravity="center"
        android:layout_marginTop="40dp"
        />

    <CheckBox
        android:id="@+id/remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Remember me" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="No account? Register!"
        android:textSize="13sp"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:textColorHighlight="#f00"
        android:textColorLink="#0f0"
        android:onClick="gotoRegister"
        />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:onClick="performLogin"
        android:text="@string/login_button" />
</LinearLayout>